--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
     </style>
 </head>
 <body>
-    <img src="https://api.thecatapi.com/v1/images/search">
+    <img id="cat" src="" alt="Random Cat Image">
     <p>placeholder site</p>
+
+    <script>
+        async function fetch() {
+            try {
+                const response = await fetch('https://api.thecatapi.com/v1/images/search');
+                const data = await response.json();
+                document.getElementById('cat').src = data[0].url;
+            } catch (error) {
+                console.error('error', error);
+            }
+        }
+        fetch();
+    </script>
 </body>
 </html>
