--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         img {
             max-width: 100%;
             height: auto;
+            max-height: 500px;
+            border-radius: 10px;
+            margin: 20px;
         }
         p {
             font-family: 'Quicksand', sans-serif;
@@ -26,20 +29,19 @@
     </style>
 </head>
 <body>
-    <img id="cat" src="" alt="Random Cat Image">
-    <p>placeholder site</p>
-
+    <img id="cat" src="/api/placeholder/400/300" alt="image">
+    <p>Random Cat Image</p>
     <script>
-        async function fetch() {
+        async function getCat() {
             try {
                 const response = await fetch('https://api.thecatapi.com/v1/images/search');
                 const data = await response.json();
                 document.getElementById('cat').src = data[0].url;
             } catch (error) {
-                console.error('error', error);
+                console.error('error:', error);
             }
         }
-        fetch();
+        getCat();
     </script>
 </body>
 </html>
