--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <img id="cat" src="/api/placeholder/400/300" alt="image">
-    <p>Random Cat Image</p>
+    <p>placeholder site</p>
     <script>
         async function getCat() {
             try {
